# characterfile

./: .env.example  .gitignore  Cargo.toml  README.md
src/: character.rs  config.rs  consts.rs  gen.rs  input.rs  main.rs
src/completion/: agent.rs  enums.rs  mod.rs
