[package]
name = "fabelis-characterfile"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
colored = "3.0.0"
dotenv = "0.15.0"
fern = { version = "0.7.1", features = ["colored"] }
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rig-core = { version = "0.6.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3.31"
anyhow = "1.0.95"
rand = "0.8.5"
pdf-extract = "0.8.0"
